--- a/src/components/buttons/Button.module.css
+++ b/src/components/buttons/Button.module.css
@@ -1,6 +1,5 @@
 .button {
 	border: none;
-	padding: 0.5em 1em;
 	outline: none;
 }
 
@@ -9,6 +8,7 @@
 }
 
 .default {
+	padding: 0.5em 2em;
 	background: rgb(50, 50, 50);
 	color: white;
 }
